api service mockup

--- a/src/_mixins.sass
+++ b/src/_mixins.sass
@@ -23,3 +23,6 @@
         border-radius: 6px
         //border: 3px solid $primary
     
+@mixin color-opacity-bg($color, $opacity)
+    background: $color
+    background: rgba($color, $opacity)
