--- a/src/App.sass
+++ b/src/App.sass
@@ -1,8 +1,8 @@
 @import './_variables'
 
 .App
-  background-color: $primary
   min-height: 100vh
+  background-color: $lightblue
 
 .App-link
   color: #61dafb
