--- a/src/_animations.sass
+++ b/src/_animations.sass
@@ -23,3 +23,9 @@
         left: 250px
     100%
         left: 0px
+
+@keyframes spin 
+    from 
+        transform: rotate(0deg)
+    to 
+        transform: rotate(90deg)
