--- a/src/index.sass
+++ b/src/index.sass
@@ -13,3 +13,7 @@ body
   margin: 0 !important
 .col
   padding: 0 !important
+.center
+  display: flex
+  align-items: center
+  justify-content: center
