--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -1,19 +1,19 @@
 @import '../_variables'
     
 .container
-    height: 100vh
-    .sign_in_panel
+    min-height: 100vh
+    .sign-in-panel
         width: 600px
         min-height: 300px
         box-shadow: 3px 3px 17px 1px #0000006e
-        .panel_navbar
-            .panel_nav
+        .panel-navbar
+            .panel-nav
                 background: $purple
                 color: #fff
                 height: 60px
                 padding-top: 10px
                 transition: 0.5s
-                .panel_icon
+                .panel-icon
                     display: block
                     margin-left: auto
                     margin-right: auto
@@ -22,14 +22,14 @@
                     user-select: none
                     letter-spacing: 3px
                     margin-top: 5px 
-            .nav_inactive
+            .nav-inactive
                 background: #fff
                 color: #000
                 cursor: pointer
                 &:hover
                     background: #ffffff71
                     color: #000
-        .panel_content
+        .panel-content
             position: relative
             background: #fff
             width: 100%
@@ -64,7 +64,7 @@
             width: 100%
             background: $blue
             clip-path: polygon(0 100%, 100% 0, 100% 100%)
-        .footer_panel
+        .footer-panel
             background: $blue
             color: #fff
             padding: 0 10px 10px 0
