--- a/src/styles/dashboard.sass
+++ b/src/styles/dashboard.sass
@@ -1,9 +1,10 @@
 @import '../_variables'
 @import '../_mixins'
     
-.main
-    height: 100vh
-    padding-top: 15vh
+.content
+    min-height: 100vh
+    padding-top: 50px
+    padding-bottom: 50px
     .app-info
         position: relative
         text-align: right
@@ -14,7 +15,7 @@
     .main-container
         width: 100%
         min-height: 300px
-        background: #fff
+        background: $primary
         box-shadow: 3px 3px 17px 1px #0000006e
         .navbar
             padding: 0
@@ -40,11 +41,11 @@
                         color: #f8eded
                 .active
                     cursor: default
-                    background: #fff
+                    background: $primary
                     color: #000
                     border-radius: 15px 15px 0 0
                     &:hover
-                        background: #fff
+                        background: $primary
                         color: #000
     .main-content
-        padding: 50px 20px
+        padding: 50px 5vw
