--- a/src/styles/register.sass
+++ b/src/styles/register.sass
@@ -3,20 +3,19 @@
 .form-signup
     position: relative
     width: 300px
-    height: 150px
     transition: 0.5s
+    padding-bottom: 60px
     @media screen and ( max-width: 350px )
         padding: 0 30px
     button
         position: absolute
         right: 0
-        @media screen and ( max-width: 350px )
-            right: 30px
-    .btn 
         padding: 6px 20px
-        color: $green
+        background-color: #ffffff00
+        color: $green !important
         border: 1px solid $green
         &:hover
-            color: #ffffff
+            color: #ffffff !important
             background-color: $green
-            
+        @media screen and ( max-width: 350px )
+            right: 30px
