--- a/src/styles/sign-in.sass
+++ b/src/styles/sign-in.sass
@@ -14,9 +14,9 @@
             right: 30px
     .btn 
         padding: 6px 20px
-        color: $green
+        background-color: #ffffff00
+        color: $green !important
         border: 1px solid $green
         &:hover
-            color: #ffffff
+            color: #ffffff !important
             background-color: $green
-            
