nav menu rework

--- a/src/styles/course.sass
+++ b/src/styles/course.sass
@@ -1,28 +1,97 @@
 @import '../_variables'
 @import '../_animations'
+  
 
-    
-.list
-    padding: 25px 2vw
-    width: 90%
+
+.wrapper
+    display: flex
+    position: relative
+    .course-menu
+        position: fixed
+        max-width: 350px
+        height: 100vh
+        background: $lighterblue
+        box-shadow: 3px 3px 17px 1px #0000006e
+        ul 
+            padding: 0 25px
+            li 
+                list-style-type: none
+                .list-elem
+                    position: relative
+                    display: block !important
+                    max-width: 100%
+                    margin: 25px 0
+                    padding: 25px 20px
+                    color: #000
+                    border: 2px solid #111
+                    font-weight: 600
+                    cursor: pointer
+                    .course-name 
+                        position: relative
+                        z-index: 2
+                    &::before
+                        content: ''
+                        position: absolute
+                        top: -2px
+                        bottom: -2px
+                        right: -2px
+                        width: calc( 100% + 2px )
+                        height: calc( 100% + 4px )
+                        background: $lighterblue
+                        transition: 0.4s ease-in-out
+                    &:hover::before
+                        width: 0px
+                    &::after
+                        content: ''
+                        position: absolute
+                        top: 0
+                        right: -2px
+                        width: 5px
+                        height: 100%
+                        background: $lighterblue
+                        transition: 0.2s ease-in 0.4s
+                        transform: scaleY(1)
+                    &:hover::after
+                        transform: scaleY(0)
+                .active
+                    &::before
+                        visibility: hidden
+                    &::after
+                        visibility: hidden                        
+        span
+            .panel-icon 
+                position: absolute
+                right: 10px
+                top: 10px
+                font-size: 25px
+                visibility: hidden
+                @media screen and ( max-width: 1000px )
+                    visibility: visible
+        @media screen and ( max-width: 1000px )
+            position: absolute
+            left: -275px
+
+
+
+
+
+
+.flex-column
+    position: fixed
+    max-width: 350px
+    height: 100vh
+    background: $lighterblue
+    box-shadow: 3px 3px 17px 1px #0000006e
     .list-elem
         position: relative
+        display: block !important
         max-width: 100%
         margin: 25px
-        display: block
         padding: 25px 20px
+        color: #000
         border: 2px solid #111
         font-weight: 600
         cursor: pointer
-        .panel-icon
-            position: relative
-            z-index: 2
-            margin-left: 25px
-            font-size: 20px
-            float: right
-            &:hover
-                color: $blue
-                animation: spin 0.5s ease-in-out forwards
         .course-name 
             position: relative
             z-index: 2
@@ -34,7 +103,7 @@
             right: -2px
             width: calc( 100% + 2px )
             height: calc( 100% + 4px )
-            background: $primary
+            background: $lighterblue
             transition: 0.4s ease-in-out
         &:hover::before
             width: 0px
@@ -45,7 +114,7 @@
             right: -2px
             width: 5px
             height: 100%
-            background: $primary
+            background: $lighterblue
             transition: 0.2s ease-in 0.4s
             transform: scaleY(1)
         &:hover::after
