--- a/src/styles/dashboard.sass
+++ b/src/styles/dashboard.sass
@@ -13,10 +13,13 @@
             left: 5px
             bottom: -5px
     .main-container
-        width: 100%
+        margin-left: auto
+        width: 75%
         min-height: 300px
         background: $primary
         box-shadow: 3px 3px 17px 1px #0000006e
+        @media screen and ( max-width: 1000px )
+            width: 100%
         .navbar
             padding: 0
             min-height: 66px
