--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -3,32 +3,23 @@
 .container
     min-height: 100vh
     .sign-in-panel
-        width: 600px
-        min-height: 300px
-        box-shadow: 3px 3px 17px 1px #0000006e
-        .panel-navbar
-            .panel-nav
-                background: $purple
-                color: #fff
-                height: 60px
-                padding-top: 10px
-                transition: 0.5s
-                .panel-icon
-                    display: block
-                    margin-left: auto
-                    margin-right: auto
-                p 
-                    text-align: center
-                    user-select: none
-                    letter-spacing: 3px
-                    margin-top: 5px 
-            .nav-inactive
-                background: #fff
-                color: #000
-                cursor: pointer
-                &:hover
-                    background: #ffffff71
-                    color: #000
+        position: relative
+        width: 500px
+        @media screen and ( max-width: 500px )
+            width: 100%
+        .panel-nav
+            height: 60px
+            background: $purple
+            color: #fff
+            font-size: 20px
+            letter-spacing: 4px
+            user-select: none
+            &:hover
+                .slope1
+                    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 0)
+            .panel-icon
+                display: inline-block
+                margin-right: 20px
         .panel-content
             position: relative
             background: #fff
@@ -36,38 +27,31 @@
             min-height: 400px
             padding: 15% 25% 10% 25%
         .slope
+            position: absolute
+            z-index: 2
             transition: 0.5s
-        .slope0
-            position: absolute
-            z-index: 2
-            top: -1px
-            left: 0
-            height: 60px
-            width: 100%
-            background: $purple
-            clip-path: polygon(0 0, 100% 0, 100% 50%, 0 100%)
         .slope1
-            position: absolute
-            z-index: 2
-            top: -1px
+            top: 60px
             left: 0
-            height: 60px
+            height: 40px
             width: 100%
             background: $purple
-            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%)
+            clip-path: polygon(0 0, 100% 0, 100% 0, 0 100%)
         .slope2
-            position: absolute
-            z-index: 2
-            bottom: -1px
+            top: -39px
             left: 0
             height: 40px
             width: 100%
             background: $blue
-            clip-path: polygon(0 100%, 100% 0, 100% 100%)
+            clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 100%)
         .footer-panel
+            position: relative
             background: $blue
             color: #fff
             padding: 0 10px 10px 0
+            &:hover
+                .slope2
+                    clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 0)
             p 
                 margin: 15px 0
                 font-size: 18px
