--- a/src/styles/dashboard.sass
+++ b/src/styles/dashboard.sass
@@ -13,7 +13,9 @@
             left: 5px
             bottom: -5px
     .main-container
+        position: relative
         margin-left: auto
+        padding: 50px 10px 25px 10px
         width: 75%
         min-height: 300px
         background: $primary
