--- a/src/styles/dashboard.sass
+++ b/src/styles/dashboard.sass
@@ -2,16 +2,47 @@
 @import '../_mixins'
     
 .content
+    position: relative
     min-height: 100vh
-    padding-top: 50px
+    padding-top: 7%
     padding-bottom: 50px
-    .app-info
-        position: relative
-        text-align: right
-        img 
+    .btn-logout
+        position: absolute
+        cursor: pointer
+        right: 15px
+        top: 40px
+        padding: 5px 20px 5px 20px
+        border: 2px solid #111
+        transition: 0.4s ease-in-out
+        span
+            position: relative
+            z-index: 2
+            text-transform: uppercase
+        &::before
+            content: ''
             position: absolute
-            left: 5px
-            bottom: -5px
+            bottom: -2px
+            left: 0
+            width: calc( 100% + 2px )
+            height: 2px
+            background: $lightblue
+            transition: 0.3s ease-in-out
+        &:hover::before
+            width: 0px
+        &::after
+            content: ''
+            position: absolute
+            bottom: -2px
+            left: -2px
+            width: 20px
+            height: calc( 100% + 2px )
+            background: $lightblue
+            transition: 0.3s ease-in-out
+            transform: scaleY(1)
+        &:hover::after
+            height: 0px
+        &:hover
+            background: #ffffff18
     .main-container
         position: relative
         margin-left: auto
