--- a/src/_animations.sass
+++ b/src/_animations.sass
@@ -29,3 +29,15 @@
         transform: rotate(0deg)
     to 
         transform: rotate(90deg)
+
+@keyframes shake
+    0% 
+        transform: translate(1px, 1px) rotate(0deg)
+    25% 
+        transform: translate(-1px, -2px) rotate(-1deg)
+    50% 
+        transform: translate(-3px, 0px) rotate(1deg)
+    75% 
+        transform: translate(-1px, 2px) rotate(-1deg)
+    100% 
+        transform: translate(3px, 1px) rotate(-1deg)
