--- a/src/styles/dashboard.sass
+++ b/src/styles/dashboard.sass
@@ -4,7 +4,7 @@
 .content
     position: relative
     min-height: 100vh
-    padding-top: 7%
+    padding-top: 80px
     padding-bottom: 50px
     .btn-logout
         position: absolute
@@ -46,7 +46,6 @@
     .main-container
         position: relative
         margin-left: auto
-        padding: 50px 10px 25px 10px
         width: 75%
         min-height: 300px
         background: $primary
