--- a/src/styles/lecture.sass
+++ b/src/styles/lecture.sass
@@ -1,12 +1,22 @@
 @import '../_variables'
 @import '../_mixins'
-    
+@import '../_animations'
+
+$slipeHeight: 50px
+
 .spinner-wrap
     position: absolute
     width: 100%
     top: 40%
-.noselect-info
-    letter-spacing: 2px
+.noselect-wrap
+    position: absolute
+    width: 100%
+    height: 100%
+    .noselect-info
+        letter-spacing: 2px
+    &:hover
+        .noselect-info
+            animation: shake 0.5s ease infinite
 .course-code
     letter-spacing: 2px
 .slope
@@ -17,7 +27,7 @@
     padding: 10px 0 0 10px
     top: 0
     left: 0
-    min-height: 60px
+    min-height: $slipeHeight + 10px
     width: 100%
     background: $purple
     clip-path: polygon(0 0, 100% 0, 100% 60%, 0% 100%)
@@ -26,12 +36,13 @@
     padding: 10px 10px 0 0
     top: 0
     right: -1px
-    height: 50px
+    height: $slipeHeight
     width: 70%
     background: $blue
     clip-path: polygon(0 0, 100% 100%, 100% 0)
 .lecture-list
-    padding: 0 40px
+    padding: 40px
+    padding-top: $slipeHeight + 30px
     margin-top: 25px
     .lecture-elem
         display: block
@@ -56,6 +67,9 @@
         .link-li
             height: 100%
             width: 100%
+.presence-wrap
+    margin-top: -35px
+    padding: 0 25px 50px 25px
 .buttons-wrap
     margin-bottom: 20px
     button
