export presence for lecture to xls

--- a/src/styles/lecture-presence.sass
+++ b/src/styles/lecture-presence.sass
@@ -10,3 +10,18 @@ th
     text-align: center !important
 .text-center
     text-align: center !important
+.presence-list-wrap
+    position: relative
+    .buttons-wrap
+        position: absolute
+        z-index: 111
+        top: -58px
+        right: 0
+        .button
+            margin: 0 5px
+            background: #ffffff00
+            color: $blue
+            border-color: $blue
+            &:hover
+                color: #fff
+                background: $blue
