--- a/src/styles/lecture.sass
+++ b/src/styles/lecture.sass
@@ -13,6 +13,8 @@ $slipeHeight: 50px
     width: 100%
     height: 100%
     .noselect-info
+        text-align: center
+        font-size: 2em
         letter-spacing: 2px
     &:hover
         .noselect-info
@@ -44,6 +46,10 @@ $slipeHeight: 50px
     padding: 40px
     padding-top: $slipeHeight + 30px
     margin-top: 25px
+    button
+        margin-bottom: 10px
+        background: #ffffff00
+        color: #138496
     .lecture-elem
         display: block
         cursor: pointer
@@ -70,8 +76,9 @@ $slipeHeight: 50px
 .presence-wrap
     margin-top: -35px
     padding: 0 25px 50px 25px
-.buttons-wrap
+.btn-wrap
     margin-bottom: 20px
+    max-width: 65px
     button
         margin: 0 5px
         background: #ffffff00
