--- a/src/styles/dashboard.sass
+++ b/src/styles/dashboard.sass
@@ -4,6 +4,7 @@
 .content
     position: relative
     min-height: 100vh
+    margin-right: 15% !important 
     padding-top: 100px
     padding-bottom: 50px
     .btn-logout
@@ -46,7 +47,7 @@
     .main-container
         position: relative
         margin-left: auto
-        width: 75%
+        width: 90%
         min-height: 300px
         background: $primary
         box-shadow: 3px 3px 17px 1px #0000006e
