fix naming, schedule init

--- a/src/styles/sidebar.sass
+++ b/src/styles/sidebar.sass
@@ -22,6 +22,26 @@
             letter-spacing: 2px
         .spinner-wrap
             width: 100%
+        button
+            cursor: pointer
+            outline: none
+            display: block
+            margin-left: auto
+            margin-right: auto
+            margin-top: 20px
+            letter-spacing: 1px
+            font-weight: 500
+            text-transform: uppercase
+            padding: 10px 20px
+            border: none
+            border-radius: 5px
+            border-left: 1px solid black
+            border-right: 1px solid black
+            background: $primary
+            color: black
+            transition: all 0.3s cubic-bezier(0.65, -0.25, 0.25, 1.95)
+            &:hover
+                letter-spacing: 2px
         ul 
             padding: 0 25px
             li 
