--- a/src/styles/schedule.sass
+++ b/src/styles/schedule.sass
@@ -3,3 +3,18 @@
 
 .schedule-wrap
     padding: 80px 30px
+    table
+        table-layout: fixed
+        td
+            position: relative
+            .lecture-block
+                position: absolute
+                top: 0
+                left: 0
+                width: 100%
+                min-height: 100%
+                padding: 5px
+                font-size: 12px
+                background: $green
+                p 
+                    margin: 0
