auth is like almost working, except it is not

--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -4,3 +4,9 @@ $purple: #845A6D
 $blue: #1B4965
 $lightblue: #94BFBE
 $lighterblue: #e7f8f8
+
+//$primary: #f2fac2
+//$green: #c4fada
+//$purple: #fde0ed
+//$lightblue: #b0c0c0
+//$lighterblue: #cbf0f0
