prepared mockup api for demo

--- a/src/styles/lecture-presence.sass
+++ b/src/styles/lecture-presence.sass
@@ -30,13 +30,14 @@ th
         .btn-mark-presence
             position: absolute
             cursor: pointer
+            display: flex
+            justify-content: center
+            align-items: center
             left: 0px
             top: 0px
             width: 98%
             height: 100%
-            padding: 13px 14px
-            font-size: 12px
-            letter-spacing: 3px
+            font-size: 18px
             border: 2px solid #111
             transition: 0.4s ease-in-out
             span
