--- a/src/styles/schedule.sass
+++ b/src/styles/schedule.sass
@@ -8,6 +8,8 @@ $margin: 5px
     padding: 80px 30px
     table
         table-layout: fixed
+        min-width: 730px
+        overflow-x: auto
         .hour
             user-select: none
         td
